@@ -1,5 +1,13 @@
 2002-04-17  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
 
+	* [w3m-dev 03177] SIGUSR1 --> W3M_SIGIMG in image.c
+	* image.c (W3M_SIGIMG): added
+		(load_image_handler): s/SIGUSR1/W3M_SIGIMG/
+		(load_image_next): ditto
+		(loadImage): ditto
+
+2002-04-17  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
+
 	* [w3m-dev 03176] no Content-Type in http response header
 	* file.c (loadGeneralFile): guess content-type from filename
 
@@ -3345,4 +3353,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.370 2002/04/17 02:32:13 ukai Exp $
+$Id: ChangeLog,v 1.371 2002/04/17 02:36:45 ukai Exp $
